# burn-npu

./: .gitignore  Cargo.toml  LICENSE-MIT  README.md  build.rs  error1  error2  error3  flake.nix  perf
examples/: bench.rs
npu-sys/Sources/: npu_sys.swift
src/: burn_backend.rs  detect.rs  info.rs  lib.rs
src/backends/: apple.rs  intel.rs  mod.rs  qualcomm.rs
tests/: burn_backend.rs
